--- a/templates/shortcodes/projects/list-default.tmpl
+++ b/templates/shortcodes/projects/list-default.tmpl
@@ -1,18 +1,14 @@
-<div class="inner-wrap">
-	<div class="media-content">
-		%%IMAGE%%
-	<div class="rollover-content">
-		<div class="table-display">
-			<div class="links-container table-cell">%%EXTERNALLINK%% %%ZOOMLINK="Zoom"%% %%PERMALINK="Permalink"%%</div>
-		</div>
-	</div>
-	</div>
-	<div class="item-content">
-		<h3>%%TITLE%%</h3>
-		<div class="item-meta-container">
-			<h5>%%TAXONOMY="category"%%</h5>
-			<h4>%%DATE="Y - M - d"%% / %%AUTHOR%% / %%COMMENTS%%</h4>
-		</div>
-		%%CONTENT="25"%%
-	</div>
+<div class="project-media">
+	%%FEATUREDIMAGE%%
+</div>
+<div class="project-meta">
+	%%DATE%%
+	%%AUTHOR%%
+	%%COMMENTS%%
+</div>
+<div class="project-content">
+	%%TERMSLIST%%
+	%%TITLE%%
+	%%CONTENT%%
+	%%BUTTON%%
 </div>
