--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -21,9 +21,18 @@ div.cherry-projects-wrapper{
 		}
 }
 
-div.projects-item{
+div.cherry-projects__item{
 	.inner-wrapper{
 		position: relative;
+			.project-media{
+
+			}
+			.project-meta{
+
+			}
+			.project-content{
+
+			}
 			/*.media-content{
 				position: relative;
 				display: block;
