--- a/templates/shortcodes/projects/grid-default.tmpl
+++ b/templates/shortcodes/projects/grid-default.tmpl
@@ -1,7 +1,14 @@
-<div class="media-content">
-	%%IMAGE%%
+<div class="project-media">
+	%%FEATUREDIMAGE%%
 </div>
-<div class="item-content rollover-content">
+<div class="project-meta">
+	%%DATE%%
+	%%AUTHOR%%
+	%%COMMENTS%%
+</div>
+<div class="project-content">
+	%%TERMSLIST%%
 	%%TITLE%%
 	%%CONTENT%%
+	%%BUTTON%%
 </div>
