--- a/templates/shortcodes/projects/justified-default.tmpl
+++ b/templates/shortcodes/projects/justified-default.tmpl
@@ -1,13 +1,14 @@
-<div class="inner-wrap">
-	<div class="item-content rollover-content">
-		<div class="item-content-inner table-display">
-			<div class="table-cell">
-				<h3>%%TITLE%%</h3>%%AUTHOR%%%%COMMENTS%%%%DATE%%
-				<div class="item-meta-container">
-					<h5>%%TAXONOMY%% %%DATE%% %%AUTHOR%% %%COMMENTS%%</h5>
-				</div>
-				<div class="links-container">%%EXTERNALLINK%% %%ZOOMLINK="Zoom"%% %%PERMALINK="Permalink"%%</div>
-			</div>
-		</div>
-	</div>
+<div class="project-media">
+	%%FEATUREDIMAGE%%
+</div>
+<div class="project-meta">
+	%%DATE%%
+	%%AUTHOR%%
+	%%COMMENTS%%
+</div>
+<div class="project-content">
+	%%TERMSLIST%%
+	%%TITLE%%
+	%%CONTENT%%
+	%%BUTTON%%
 </div>
