--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -14,92 +14,96 @@
   color: #23282d;
   position: relative;
   z-index: 9; }
-  .projects-filters .projects-filters-list-wrapper {
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 1 70%;
-        -ms-flex: 0 1 70%;
-            flex: 0 1 70%; }
-    .projects-filters .projects-filters-list-wrapper ul.projects-filters-list {
-      display: inline-block;
+
+.projects-filters-list-wrapper {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 70%;
+      -ms-flex: 0 1 70%;
+          flex: 0 1 70%; }
+
+ul.projects-filters-list {
+  display: inline-block;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  ul.projects-filters-list li {
+    float: left;
+    margin-right: 20px; }
+    ul.projects-filters-list li:last-child {
+      margin-right: 0; }
+    ul.projects-filters-list li.active span {
+      color: #298ffc; }
+    ul.projects-filters-list li span {
+      margin: 0 10px 0 0;
+      cursor: pointer; }
+      ul.projects-filters-list li span:hover {
+        color: #298ffc; }
+      ul.projects-filters-list li span:last-child {
+        margin: 0; }
+
+.projects-order-filters-wrapper {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 30%;
+      -ms-flex: 0 1 30%;
+          flex: 0 1 30%; }
+
+ul.order-filters {
+  display: inline-block;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  ul.order-filters > li {
+    float: left;
+    margin: 0 10px;
+    position: relative;
+    cursor: pointer;
+    -webkit-perspective: 500px;
+    perspective: 500px;
+    -webkit-perspective-origin: 50% 50%;
+    perspective-origin: 50% 50%; }
+    ul.order-filters > li:hover {
+      text-decoration: none; }
+    ul.order-filters > li ul {
+      position: absolute;
+      left: 0;
+      background: #298ffc;
       list-style: none;
       margin: 0;
-      padding: 0; }
-      .projects-filters .projects-filters-list-wrapper ul.projects-filters-list li {
-        float: left;
-        margin-right: 20px; }
-        .projects-filters .projects-filters-list-wrapper ul.projects-filters-list li:last-child {
-          margin-right: 0; }
-        .projects-filters .projects-filters-list-wrapper ul.projects-filters-list li.active span {
-          color: #298ffc; }
-        .projects-filters .projects-filters-list-wrapper ul.projects-filters-list li span {
-          margin: 0 10px 0 0;
-          cursor: pointer; }
-          .projects-filters .projects-filters-list-wrapper ul.projects-filters-list li span:hover {
-            color: #298ffc; }
-          .projects-filters .projects-filters-list-wrapper ul.projects-filters-list li span:last-child {
-            margin: 0; }
-  .projects-filters .projects-order-filters-wrapper {
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 1 30%;
-        -ms-flex: 0 1 30%;
-            flex: 0 1 30%; }
-    .projects-filters .projects-order-filters-wrapper ul.order-filters {
-      display: inline-block;
-      list-style: none;
-      margin: 0;
-      padding: 0; }
-      .projects-filters .projects-order-filters-wrapper ul.order-filters > li {
-        float: left;
-        margin: 0 10px;
-        position: relative;
-        cursor: pointer;
-        -webkit-perspective: 500px;
-        perspective: 500px;
-        -webkit-perspective-origin: 50% 50%;
-        perspective-origin: 50% 50%; }
-        .projects-filters .projects-order-filters-wrapper ul.order-filters > li:hover {
-          text-decoration: none; }
-        .projects-filters .projects-order-filters-wrapper ul.order-filters > li ul {
-          position: absolute;
-          left: 0;
-          background: #298ffc;
-          list-style: none;
-          margin: 0;
-          padding: 10px 20px;
-          min-width: 150px;
-          z-index: 99;
-          transform-style: preserve-3d;
-          -webkit-transform-style: preserve-3d;
-          -moz-transform-style: preserve-3d;
-          -o-transform-style: preserve-3d;
-          -webkit-transform-origin: 50% 0%;
-          -ms-transform-origin: 50% 0%;
-          transform-origin: 50% 0%;
-          opacity: 0;
-          filter: alpha(opacity=0);
-          -webkit-transform: translateZ(-100px) translateY(50px) rotateX(-90deg);
-          -ms-transform: translateZ(-100px) translateY(50px) rotateX(-90deg);
-          transform: translateZ(-100px) translateY(50px) rotateX(-90deg);
-          -webkit-transition: all 0.2s cubic-bezier(0.86, 0.17, 0.83, 0.57);
-          transition: all 0.2s cubic-bezier(0.86, 0.17, 0.83, 0.57); }
-          .projects-filters .projects-order-filters-wrapper ul.order-filters > li ul li {
-            white-space: nowrap;
-            margin: 5px; }
-            .projects-filters .projects-order-filters-wrapper ul.order-filters > li ul li span {
-              color: #fff; }
-            .projects-filters .projects-order-filters-wrapper ul.order-filters > li ul li.active {
-              display: none; }
-        .projects-filters .projects-order-filters-wrapper ul.order-filters > li span.current {
-          margin-left: 10px;
-          color: #298ffc; }
-        .projects-filters .projects-order-filters-wrapper ul.order-filters > li.dropdown-state ul {
-          -webkit-transform: translateZ(0) translateY(0) rotateX(0deg);
-          -ms-transform: translateZ(0) translateY(0) rotateX(0deg);
-          transform: translateZ(0) translateY(0) rotateX(0deg);
-          opacity: 1;
-          filter: alpha(opacity=100);
-          -webkit-transition: all 0.4s cubic-bezier(0.12, 0.51, 0.33, 1.14);
-          transition: all 0.4s cubic-bezier(0.12, 0.51, 0.33, 1.14); }
+      padding: 10px 20px;
+      min-width: 150px;
+      z-index: 99;
+      transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
+      -o-transform-style: preserve-3d;
+      -webkit-transform-origin: 50% 0%;
+      -ms-transform-origin: 50% 0%;
+      transform-origin: 50% 0%;
+      opacity: 0;
+      filter: alpha(opacity=0);
+      -webkit-transform: translateZ(-100px) translateY(50px) rotateX(-90deg);
+      -ms-transform: translateZ(-100px) translateY(50px) rotateX(-90deg);
+      transform: translateZ(-100px) translateY(50px) rotateX(-90deg);
+      -webkit-transition: all 0.2s cubic-bezier(0.86, 0.17, 0.83, 0.57);
+      transition: all 0.2s cubic-bezier(0.86, 0.17, 0.83, 0.57); }
+      ul.order-filters > li ul li {
+        white-space: nowrap;
+        margin: 5px; }
+        ul.order-filters > li ul li span {
+          color: #fff; }
+        ul.order-filters > li ul li.active {
+          display: none; }
+    ul.order-filters > li span.current {
+      margin-left: 10px;
+      color: #298ffc; }
+    ul.order-filters > li.dropdown-state ul {
+      -webkit-transform: translateZ(0) translateY(0) rotateX(0deg);
+      -ms-transform: translateZ(0) translateY(0) rotateX(0deg);
+      transform: translateZ(0) translateY(0) rotateX(0deg);
+      opacity: 1;
+      filter: alpha(opacity=100);
+      -webkit-transition: all 0.4s cubic-bezier(0.12, 0.51, 0.33, 1.14);
+      transition: all 0.4s cubic-bezier(0.12, 0.51, 0.33, 1.14); }
 
 /* 3d mixins */
 /* end 3d mixins */
@@ -167,12 +171,58 @@
   -webkit-align-content: stretch;
       -ms-flex-line-pack: stretch;
           align-content: stretch; }
-  .projects-container.justified-layout .projects-list .projects-item {
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 1 auto;
-        -ms-flex: 0 1 auto;
-            flex: 0 1 auto;
-    height: auto; }
+.projects-container.justified-layout .projects-item {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  height: auto; }
+
+.projects-container.cascading-grid-layout .projects-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-align-content: stretch;
+      -ms-flex-line-pack: stretch;
+          align-content: stretch; }
+.projects-container.cascading-grid-layout .projects-item {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  height: auto; }
+
+.projects-container.list-layout .projects-list .projects-item {
+  margin-bottom: 20px; }
+.projects-container.list-layout .inner-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap; }
+.projects-container.list-layout .project-media {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  min-width: 30%;
+  margin-right: 20px; }
+.projects-container.list-layout .project-content {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  min-width: 70%; }
 
 /* 3d mixins */
 /* end 3d mixins */
@@ -357,17 +407,17 @@ div.cherry-projects-wrapper .projects-container.loading-animation-fall-perspecti
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease; }
 
-div.cherry-projects-wrapper {
+.cherry-projects-wrapper {
   color: #23282d;
   border-bottom: 1px solid #000; }
-  div.cherry-projects-wrapper .projects-container {
+  .cherry-projects-wrapper .projects-container {
     position: relative;
     z-index: 8; }
-  div.cherry-projects-wrapper .projects-list {
+  .cherry-projects-wrapper .projects-list {
     position: relative;
     min-height: 100px; }
 
-div.cherry-projects__item {
+.projects-item {
   /*&.simple-fade-hover{
   	.rollover-content{
   		opacity: 0;
@@ -398,66 +448,13 @@ div.cherry-projects__item {
   		}
   	}
   }*/ }
-  div.cherry-projects__item .inner-wrapper {
-    position: relative
-    /*.media-content{
-    	position: relative;
-    	display: block;
-    	overflow: hidden;
-    		img{
-    			width: 100%;
-    			height: auto;
-    		}
-    }
-    .item-content{
-    	.item-meta-container{}
-    }
-    .thumbnailset{
-    	list-style: none;
-    	margin: 0;
-    	padding: 0;
-    	li{
-    		float: left;
-    		img{
-    			width: auto;
-    			height: auto;
-    		}
-    	}
-    }
-    .post-format{
-    	display: block;
-    	margin: 5px 0;
-    }
-    .links-container{
-    	.item-link{
-    		border: 2px solid #fff;
-    		color: #fff;
-    		padding: 5px 10px;
-    		margin: 2px;
-    		display: inline-block;
-    			&:hover{
-    				text-decoration: none;
-    			}
-    	}
-    }
-    .rollover-content{
-    	position: absolute;
-    	top: 0;
-    	left: 0;
-    	width: 100%;
-    	height: 100%;
-    	background: rgba(0, 0, 0, 0.3);
-    	text-align: center;
-    }
-    .table-display{
-    	display: table;
-    	width: 100%;
-    	height: 100%;
-    }
-    .table-cell{
-    	display: table-cell;
-    	vertical-align: middle;
-    }*/ }
+  .projects-item .inner-wrapper {
+    position: relative; }
+  .projects-item .featured-image {
+    width: 100%; }
+    .projects-item .featured-image img {
+      width: 100%;
+      height: auto; }
 
 .projects-end-line-spinner {
   width: 100%; }
