--- a/public/assets/scss/_cascading-grid-layout.scss
+++ b/public/assets/scss/_cascading-grid-layout.scss
@@ -1,12 +1,10 @@
 .projects-container{
-	&.justified-layout{
+	&.cascading-grid-layout{
 		.projects-list{
 			display: flex;
 			flex-flow: row wrap;
-			justify-content: space-between;
 			align-items: stretch;
 			align-content: stretch;
-
 		}
 		.projects-item{
 			flex: 0 1 auto;
