--- a/templates/shortcodes/projects/standard-post-template.tmpl
+++ b/templates/shortcodes/projects/standard-post-template.tmpl
@@ -2,6 +2,7 @@
 	%%FEATUREDIMAGE%%
 </div>
 <div class="cherry-projects-single__content">
+	%%SKILLSLIST%%
 	%%DETAILSLIST%%
 	<div class="cherry-projects-single-meta">
 		%%DATE%%
